--- a/htdocs/css/main.less
+++ b/htdocs/css/main.less
@@ -22,7 +22,7 @@ body {
 .sidebar {
   display: none;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .sidebar {
     position: fixed;
     top: 51px;
@@ -91,6 +91,32 @@ body > nav {
  * Content
  */
 
-.row .row {
-    div { min-height: 300px; }
+.tab-pane {
+    padding-top: 1em;
+    .row();
 }
+
+.dnd35 {
+    table.attributes, table.saves {
+        input { width: 100%; }
+        th, td { border-top: 0; }
+    }
+
+    .healthsummary {
+        font-size: 125%;
+        > div { margin-top: 0.1em; }
+        div { margin-bottom: 0; }
+    }
+
+    .healthdetails {
+        .form-group { padding-left: 5px; padding-right: 5px; }
+    }
+
+    .acsummary {
+        font-size: 125%;
+        margin-top: 0.7em;
+        margin-bottom: 0.2em;
+    }
+
+}
+
